--- a/index.html
+++ b/index.html
@@ -173,19 +173,21 @@
             const remainingAmount = totalPrice - downpayment;
             let monthlyRate = getMonthlyRate(months);
 
-            if (remainingAmount >= 20000) {
+            if (remainingAmount >= 200000) {
                 monthlyRate *= 0.8;
-            } else if (remainingAmount >= 10000) {
+            } else if (remainingAmount >= 100000) {
                 monthlyRate *= 0.9;
             }
 
             const totalWithProfit = remainingAmount * (1 + monthlyRate);
             const monthlyPayment = roundUpToNearest10(totalWithProfit / months);
-            const finalTotal = monthlyPayment * months;
+            const finalTotal = monthlyPayment * months + downpayment;
 
             document.getElementById('result').innerHTML = `
+                السعر الإجمالي: ${formatNumber(totalPrice)} <br>
+                المبلغ المتبقي: ${formatNumber(remainingAmount)} <br>
                 القسط الشهري: ${formatNumber(monthlyPayment)} <br>
-                إجمالي المبلغ: ${formatNumber(finalTotal)} 
+                إجمالي المبلغ مع التسبيق: ${formatNumber(finalTotal)} 
             `;
         }
 
