--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>حاسبة تقسيط العمرة</title>
-    <link href="https://fonts.googleapis.com/css2?family=Tajawal:wght@400;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
     <style>
         body {
-            font-family: 'Tajawal', sans-serif;
-            background: linear-gradient(135deg, #f5f7fa 0%, #c3cfe2 100%);
+            font-family: 'Roboto', sans-serif;
+            background: linear-gradient(135deg, #ece9e6 0%, #ffffff 100%);
             height: 100vh;
             margin: 0;
             display: flex;
@@ -19,71 +19,73 @@
         }
         #root {
             width: 100%;
-            max-width: 400px;
+            max-width: 450px;
         }
         .calculator {
-            background-color: white;
-            padding: 2rem;
-            border-radius: 15px;
-            box-shadow: 0 10px 20px rgba(0,0,0,0.1);
+            background-color: #ffffff;
+            padding: 2.5rem;
+            border-radius: 20px;
+            box-shadow: 0 20px 40px rgba(0,0,0,0.1);
             width: 100%;
             text-align: center;
             transition: transform 0.3s, box-shadow 0.3s;
         }
         .calculator:hover {
-            transform: translateY(-5px);
-            box-shadow: 0 15px 25px rgba(0,0,0,0.2);
+            transform: translateY(-10px);
+            box-shadow: 0 25px 50px rgba(0,0,0,0.2);
         }
         h2 {
             color: #2c3e50;
-            margin-bottom: 1.5rem;
-            font-size: 1.8rem;
+            margin-bottom: 2rem;
+            font-size: 2rem;
+            font-weight: 700;
         }
         .input-group {
-            margin-bottom: 1.5rem;
+            margin-bottom: 2rem;
             text-align: right;
             display: flex;
             flex-direction: column;
             align-items: flex-end;
         }
         label {
-            margin-bottom: 0.5rem;
+            margin-bottom: 0.7rem;
             color: #34495e;
-            font-weight: bold;
-            font-size: 1rem;
+            font-weight: 500;
+            font-size: 1.1rem;
         }
         select, input {
             width: 100%;
-            padding: 10px;
-            border: 1px solid #bdc3c7;
-            border-radius: 5px;
+            padding: 12px 15px;
+            border: 1.5px solid #bdc3c7;
+            border-radius: 8px;
             font-size: 1rem;
-            transition: border-color 0.3s;
-            background-color: white;
+            transition: border-color 0.3s, box-shadow 0.3s;
+            background-color: #f9f9f9;
         }
         select:focus, input:focus {
             outline: none;
             border-color: #3498db;
+            box-shadow: 0 0 8px rgba(52, 152, 219, 0.3);
         }
         select {
             cursor: pointer;
         }
         .result-box {
-            background-color: #ecf0f1;
-            padding: 1.5rem;
-            border-radius: 5px;
-            margin-top: 1.5rem;
+            background-color: #f0f4f8;
+            padding: 2rem;
+            border-radius: 10px;
+            margin-top: 2rem;
             transition: background-color 0.3s;
         }
         .result-box:hover {
-            background-color: #d0d7de;
+            background-color: #dfe6e9;
         }
         #result {
             margin: 0;
-            font-size: 1.3rem;
-            font-weight: bold;
+            font-size: 1.4rem;
+            font-weight: 600;
             color: #2c3e50;
-            line-height: 1.8;
+            line-height: 2;
         }
         input::-webkit-outer-spin-button,
         input::-webkit-inner-spin-button {
@@ -95,13 +97,13 @@
         }
         @media (max-width: 600px) {
             .calculator {
-                padding: 1.5rem;
+                padding: 2rem;
             }
             h2 {
-                font-size: 1.5rem;
+                font-size: 1.7rem;
             }
             #result {
-                font-size: 1.1rem;
+                font-size: 1.2rem;
             }
         }
     </style>
@@ -141,7 +143,7 @@
          * @returns {string}
          */
         const formatNumber = (number) => {
-            return number.toLocaleString('ar-EG', {
+            return number.toLocaleString('en-US', {
                 useGrouping: true,
                 maximumFractionDigits: 0
             });
