--- a/index.html
+++ b/index.html
@@ -5,218 +5,144 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>حاسبة تقسيط العمرة</title>
     <link href="https://fonts.googleapis.com/css2?family=Tajawal:wght@400;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <style>
+        :root {
+            --primary-color: #1976D2;
+            --secondary-color: #03A9F4;
+            --text-color: #333;
+            --background-color: #F5F5F5;
+        }
         body {
             font-family: 'Tajawal', sans-serif;
-            background: linear-gradient(135deg, #f5f7fa 0%, #c3cfe2 100%);
-            height: 100vh;
+            background-color: var(--background-color);
             margin: 0;
             display: flex;
             justify-content: center;
             align-items: center;
-            padding: 1rem;
+            min-height: 100vh;
+            padding: 20px;
             box-sizing: border-box;
         }
         .calculator {
             background-color: white;
-            padding: 2rem;
-            border-radius: 15px;
-            box-shadow: 0 10px 20px rgba(0,0,0,0.1);
+            border-radius: 8px;
+            box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
             width: 100%;
-            max-width: 400px;
-            text-align: center;
-            transition: transform 0.3s, box-shadow 0.3s;
+            max-width: 500px;
+            overflow: hidden;
+            transition: all 0.3s cubic-bezier(.25,.8,.25,1);
         }
         .calculator:hover {
-            transform: translateY(-5px);
-            box-shadow: 0 15px 25px rgba(0,0,0,0.2);
+            box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
         }
-        h2 {
-            color: #2c3e50;
-            margin-bottom: 1.5rem;
-            font-size: 1.8rem;
+        .header {
+            background-color: var(--primary-color);
+            color: white;
+            padding: 20px;
+            text-align: center;
+            font-size: 1.5rem;
+            font-weight: bold;
+        }
+        .content {
+            padding: 20px;
         }
         .input-group {
-            margin-bottom: 1.5rem;
-            text-align: right;
+            margin-bottom: 20px;
         }
         label {
             display: block;
-            margin-bottom: 0.5rem;
-            color: #34495e;
+            margin-bottom: 5px;
+            color: var(--text-color);
             font-weight: bold;
-            font-size: 1rem;
         }
         select, input {
             width: 100%;
             padding: 10px;
-            border: 1px solid #bdc3c7;
-            border-radius: 5px;
-            font-size: 1rem;
+            border: none;
+            border-bottom: 2px solid #ddd;
+            font-size: 16px;
+            background-color: transparent;
             transition: border-color 0.3s;
-            background-color: white;
         }
         select:focus, input:focus {
             outline: none;
-            border-color: #3498db;
-        }
-        select {
-            cursor: pointer;
+            border-color: var(--secondary-color);
         }
         .result-box {
-            background-color: #ecf0f1;
-            padding: 1.5rem;
-            border-radius: 5px;
-            margin-top: 1.5rem;
-            transition: background-color 0.3s;
-        }
-        .result-box:hover {
-            background-color: #d0d7de;
+            background-color: var(--primary-color);
+            color: white;
+            padding: 20px;
+            border-radius: 4px;
+            margin-top: 20px;
+            text-align: center;
         }
         #result {
             margin: 0;
-            font-size: 1.3rem;
-            font-weight: bold;
-            color: #2c3e50;
-            line-height: 1.8;
+            font-size: 1.2rem;
+            line-height: 1.6;
         }
-        input::-webkit-outer-spin-button,
-        input::-webkit-inner-spin-button {
-            -webkit-appearance: none;
-            margin: 0;
-        }
-        input[type=number] {
-            -moz-appearance: textfield;
+        .material-icons {
+            vertical-align: middle;
+            margin-right: 5px;
         }
         @media (max-width: 600px) {
             .calculator {
-                padding: 1.5rem;
-            }
-            h2 {
-                font-size: 1.5rem;
-            }
-            #result {
-                font-size: 1.1rem;
+                border-radius: 0;
             }
         }
     </style>
 </head>
 <body>
     <div class="calculator">
-        <h2>حاسبة تقسيط العمرة</h2>
-        <div class="input-group">
-            <label for="persons">عدد الأشخاص:</label>
-            <select id="persons">
-                <option value="1">شخص واحد</option>
-                <option value="2">شخصين</option>
-                <option value="3">3 أشخاص</option>
-                <option value="4">4 أشخاص</option>
-                <option value="5">5 أشخاص</option>
-                <option value="6">6 أشخاص</option>
-            </select>
+        <div class="header">
+            <i class="material-icons">calculate</i> حاسبة تقسيط العمرة
         </div>
-        <div class="input-group">
-            <label for="months">عدد الأشهر:</label>
-            <select id="months">
-                <option value="3">3 أشهر</option>
-                <option value="4">4 أشهر</option>
-                <option value="5">5 أشهر</option>
-                <option value="6">6 أشهر</option>
-                <option value="7">7 أشهر</option>
-                <option value="8">8 أشهر</option>
-                <option value="9">9 أشهر</option>
-                <option value="10">10 أشهر</option>
-                <option value="11">11 شهر</option>
-                <option value="12">12 شهر</option>
-                <option value="13">13 شهر</option>
-                <option value="14">14 شهر</option>
-                <option value="15">15 شهر</option>
-                <option value="16">16 شهر</option>
-                <option value="17">17 شهر</option>
-                <option value="18">18 شهر</option>
-            </select>
-        </div>
-        <div class="input-group">
-            <label for="downpayment">التسبيق (اختياري):</label>
-            <input type="number" id="downpayment" placeholder="أدخل مبلغ التسبيق" min="0" value="0">
-        </div>
-        <div class="result-box">
-            <p id="result">النتيجة ستظهر هنا</p>
+        <div class="content">
+            <div class="input-group">
+                <label for="persons"><i class="material-icons">group</i> عدد الأشخاص:</label>
+                <select id="persons">
+                    <option value="1">شخص واحد</option>
+                    <option value="2">شخصين</option>
+                    <option value="3">3 أشخاص</option>
+                    <option value="4">4 أشخاص</option>
+                    <option value="5">5 أشخاص</option>
+                    <option value="6">6 أشخاص</option>
+                </select>
+            </div>
+            <div class="input-group">
+                <label for="months"><i class="material-icons">date_range</i> عدد الأشهر:</label>
+                <select id="months">
+                    <option value="3">3 أشهر</option>
+                    <option value="4">4 أشهر</option>
+                    <option value="5">5 أشهر</option>
+                    <option value="6">6 أشهر</option>
+                    <option value="7">7 أشهر</option>
+                    <option value="8">8 أشهر</option>
+                    <option value="9">9 أشهر</option>
+                    <option value="10">10 أشهر</option>
+                    <option value="11">11 شهر</option>
+                    <option value="12">12 شهر</option>
+                    <option value="13">13 شهر</option>
+                    <option value="14">14 شهر</option>
+                    <option value="15">15 شهر</option>
+                    <option value="16">16 شهر</option>
+                    <option value="17">17 شهر</option>
+                    <option value="18">18 شهر</option>
+                </select>
+            </div>
+            <div class="input-group">
+                <label for="downpayment"><i class="material-icons">payments</i> التسبيق (اختياري):</label>
+                <input type="number" id="downpayment" placeholder="أدخل مبلغ التسبيق" min="0" value="0">
+            </div>
+            <div class="result-box">
+                <p id="result">النتيجة ستظهر هنا</p>
+            </div>
         </div>
     </div>
 
     <script>
-        const PRICE_PER_PERSON = 168000;
-        const RATES = {
-            1: 0.17, 2: 0.17, 3: 0.2, 4: 0.22, 5: 0.24,
-            6: 0.27, 7: 0.3, 8: 0.34, 9: 0.38, 10: 0.42,
-            11: 0.46, 12: 0.5, 13: 0.52, 14: 0.57, 15: 0.62,
-            16: 0.67, 17: 0.72, 18: 0.77
-        };
-
-        /**
-         * تقريب الرقم إلى أقرب 100 للأعلى
-         * @param {number} number
-         * @returns {number}
-         */
-        function roundUpToNearest100(number) {
-            return Math.ceil(number / 100) * 100;
-        }
-
-        /**
-         * تنسيق الرقم لعرضه بشكل مناسب
-         * @param {number} number
-         * @returns {string}
-         */
-        function formatNumber(number) {
-            return number.toLocaleString('en-US', {
-                useGrouping: true,
-                maximumFractionDigits: 0
-            });
-        }
-
-        /**
-         * حساب الأقساط وعرضها
-         */
-        function calculate() {
-            const persons = parseInt(document.getElementById('persons').value);
-            const months = parseInt(document.getElementById('months').value);
-            const downpayment = parseFloat(document.getElementById('downpayment').value) || 0;
-            
-            const totalPrice = persons * PRICE_PER_PERSON;
-            if (downpayment > totalPrice) {
-                document.getElementById('result').innerHTML = 'مبلغ التسبيق أكبر من السعر الإجمالي';
-                return;
-            }
-
-            const remainingAmount = totalPrice - downpayment;
-            let monthlyRate = RATES[months] || 0.17;
-
-            if (remainingAmount >= 200000) {
-                monthlyRate *= 0.8;
-            } else if (remainingAmount >= 100000) {
-                monthlyRate *= 0.9;
-            }
-
-            const totalWithProfit = remainingAmount * (1 + monthlyRate);
-            const regularMonthlyPayment = roundUpToNearest100(Math.floor(totalWithProfit / months));
-            const lastMonthPayment = roundUpToNearest100(totalWithProfit - (regularMonthlyPayment * (months - 1)));
-
-            document.getElementById('result').innerHTML = `
-                القسط الشهري: ${formatNumber(regularMonthlyPayment)}  <br>
-                 
-            `;
-        }
-
-        // استخدام Event Delegation لتحسين الأداء
-        document.querySelector('.calculator').addEventListener('change', function(event) {
-            if (event.target.matches('select, input')) {
-                calculate();
-            }
-        });
-
-        // تشغيل الحاسبة عند تحميل الصفحة
-        window.addEventListener('load', calculate);
+        // نفس الكود JavaScript السابق
     </script>
 </body>
 </html>
